--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,15 @@ button:active {
   border-color: #33059e;
 }
 
+button:disabled,
+button:disabled:active,
+button:disabled:hover {
+  background-color: #ccc;
+  color: #a0a0a0;
+  border: #ccc;
+  cursor: not-allowed;
+}
+
 .form-actions {
   text-align: right;
 }
